# nfl-analytics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: train-spread-predictor.yaml
nfl_analytics/: config.py  data.py  data_dev.ipynb  dataframes.py  dev.ipynb  dev_notebook.ipynb  get_data.py  load_data.py  main.py  model.py  schedule.py  utils.py
nfl_analytics/assets/: trained_model.joblib  trained_scaler.joblib
nfl_analytics/docs/: brain-dump.md  model.md  training-data.md
nfl_analytics/docs/sample_data/: event-401547378.json  event-401547464.json  teams-8.json
nfl_analytics/sample_data/: README.md  blacklist-02-10-2024.json  blacklist-02-17-2024.json  season-02-10-2024.json  season-02-17-2024.json
nfl_analytics/scripts/: scrape_team_abbreviations.sh
